[gd_scene load_steps=8 format=3 uid="uid://c4syptu3nod08"]

[ext_resource type="Script" uid="uid://dxutluo1nn35m" path="res://scripts/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://cdpin830d8ydf" path="res://assets/monochrome_tilemap_transparent_packed.png" id="2_5uy6h"]
[ext_resource type="PackedScene" uid="uid://c74aod1lijcu8" path="res://scenes/killzone.tscn" id="3_c4w8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_5uy6h")
region = Rect2(16, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_5uy6h")
region = Rect2(32, 272, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_md484"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ipns3"]
radius = 5.0
height = 10.0

[node name="Enemy" type="Node2D"]
script = ExtResource("1_4ra3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_md484")
animation = &"move"
frame = 1
frame_progress = 0.226982

[node name="Killzone" parent="." instance=ExtResource("3_c4w8v")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ipns3")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
target_position = Vector2(2.38419e-07, 8)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-8, 2)
target_position = Vector2(2.38419e-07, 8)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 2)
rotation = -1.5708
target_position = Vector2(-2.38419e-07, 8)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(8, 2)
target_position = Vector2(-2.38419e-07, 8)
